fix CSS overflow bugs

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -248,14 +248,13 @@ img {
 }
 
 [alt*="full-width"]{
-  width: 100vw;
-  max-width: 100vw;
+  width: 98vw;
+  max-width: 98vw;
   position: relative;
   left: 50%;
   right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  padding: 10px;
+  margin-left: -49vw;
+  margin-right: -49vw;
 }
 
 
@@ -264,6 +263,10 @@ table {
   width: 100%;
   border: 1px solid #e5e5e5;
   border-collapse: collapse;
+  &.fixed{
+    table-layout: fixed;
+    overflow-wrap: break-word;
+  }
 }
 
 td,
